Actualización de application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=plataforma_educativa
+# ===================================
+# Configuración general
+# ===================================
+spring.application.name=plataforma-educativa
+server.port=8081
+
+# ===================================
+# MICRO1 - Autenticación y Usuarios
+# ===================================
+spring.datasource.micro1.url=jdbc:mysql://localhost:3306/micro1_usuarios
+spring.datasource.micro1.username=root
+spring.datasource.micro1.password=Lautaro2018!
+spring.datasource.micro1.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.micro1.hibernate.ddl-auto=update
+spring.jpa.micro1.show-sql=true
