--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.micro1.password=Lautaro2018!
 spring.datasource.micro1.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.micro1.hibernate.ddl-auto=update
 spring.jpa.micro1.show-sql=true
+
+##Comentario para commit desde GitHub Desktop
